force-app/main/default/objects/Field_Mapping_Template__mdt/Field_Mapping_Template__mdt.object-meta.xml
<CustomObject>
    <description>Field mapping template for Jira integration to Copado (Contains default for 7S Jira Projects)</description>
    <label>Field Mapping Template</label>
    <pluralLabel>Mapping Tempates</pluralLabel>
</CustomObject>