force-app/main/default/objects/Field_Mapping_Template__mdt/fields/Target_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Type__c</fullName>
    <description>Default value is set to string if not selected.</description>
    <label>Target Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>string</fullName>
                <default>true</default>
                <label>string</label>
            </value>
            <value>
                <fullName>object</fullName>
            </value>
            <value>
                <fullName>integer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>