force-app/main/default/objects/Field_Mapping_Template__mdt/fields/Third_Party_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Field_Name__c</fullName>
    <label>Third Party Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>