force-app/main/default/objects/Field_Mapping_Template__mdt/listViews/X7S.listView-meta.xml
<ListView>
    <fullName>X7S</fullName>
    <columns>MasterLabel</columns>
    <columns>Salesforce_Field_Name__c</columns>
    <columns>Third_Party_Field_Name__c</columns>
    <columns>Exclude_from_su__c</columns>
    <columns>Exclude_from_tpu__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>startsWith</operation>
        <value>7S</value>
    </filters>
    <label>7S</label>
    <language>en_US</language>
</ListView>